2002-07-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: removed --enable-usecode-debugger (it's 1.1.x only)
	* exult.cc: undo double click change. (it broke gumps)

2002-07-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: allow (but ignore) large changes to loop arrays

2002-07-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: don't count dragging for double clicks

2002-07-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: allow small changes to loop-array in mid-loop in SI
	* effects.*: 'backported' delayed-blast fix from main branch
	* useval.*: added operator!= (and changed operator== to return bool)
	* objs.cc: removed "x's ashes" code again. (not correct)
	* objs.cc: fixed "x's ashes" code for teleported urn at start

2002-07-05  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* actors.cc: Magic boots keep you from getting poisoned in swamp
	(in SI).

2002-07-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: fixed --buildmap

2002-07-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* autogen.sh: fixed problem when automake was compiled with aclocal
	data directory /usr/local/share/aclocal

2002-07-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: implemented "x's ashes" name in SI
	* font.cc: fixed word wrapping off-by-hlead

2002-07-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: last commit seems to have gone wrong... should be ok now

2002-07-02  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc,chunks.{cc,h},egg.{cc,h},ucsched.cc:  Have initial
	eggs execute immediately.  Fixed Avatar appearance at start of SI.

2002-07-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: fixes to SI item names (thanks sb-x)

2002-07-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: even more item names for SI
